retrieveUnpackaged/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Tipo_de_producto_que_le_interesa__c</fullName>
        <label>Tipo de producto que le interesa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crédito de vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
                <value>
                    <fullName>Asignación de cupo</fullName>
                </value>
                <value>
                    <fullName>Compra de cartera</fullName>
                </value>
                <value>
                    <fullName>Seguro educativo</fullName>
                    <label>Seguro Educativo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda__c</fullName>
        <label>Tipo de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vis</fullName>
                </value>
                <value>
                    <fullName>No Vis</fullName>
                </value>
                <value>
                    <fullName>Vipa</fullName>
                </value>
                <value>
                    <fullName>Vip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda_residencia__c</fullName>
        <label>Tipo de vivienda residencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Propia</fullName>
                </value>
                <value>
                    <fullName>Hipotecada</fullName>
                </value>
                <value>
                    <fullName>Familiar</fullName>
                </value>
                <value>
                    <fullName>Arriendo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valida_numero_de_celular__c</fullName>
        <label>Valida número de celular</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_apellido__c</fullName>
        <label>Validar apellido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_nombre__c</fullName>
        <label>Validar nombre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validar_numero_de_documento__c</fullName>
        <label>Validar número de documento</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_de_la_poliza__c</fullName>
        <label>Valor de la póliza</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_de_vivienda__c</fullName>
        <inlineHelpText>Hipotecario: Valor del inmueble
Seguro educativo: Valor del seguro</inlineHelpText>
        <label>Valor del producto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito__c</fullName>
        <description>Valor preaprobado.</description>
        <label>Valor del crédito</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Viable__c</fullName>
        <formula>IF( TEXT(Concepto_del_candidato__c)= &quot;Viable&quot;,&quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vive_en_el_inmueble__c</fullName>
        <label>Vive en el inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Candidatos_no_leidos</fullName>
        <columns>Origen__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Otro_telefono_de_contacto__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>Concepto_del_candidato__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>003.Candidatos No leidos</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X001_Candidatos_nuevos</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <label>001.Candidatos nuevos</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X002_Mis_candidatos_asignados</fullName>
        <columns>Origen__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>Calificacion__c</columns>
        <columns>Propietario_candidato__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Asignado</value>
        </filters>
        <label>002.Mis candidatos asignados</label>
        <sharedTo>
            <role>Asor_de_leads</role>
            <role>Auxiliar_canal_digital</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X004_Candidatos_de_hoy</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Keyword__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>004.Candidatos de hoy</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X005_Candidatos_de_ayer</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>005.Candidatos de ayer</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X009_Candidatos_del_mes_pasado</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <label>009.Candidatos del mes pasado</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X013_Candidatos_por_validar_informaci</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Verificando</value>
        </filters>
        <label>013.Candidatos por validar informaci</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X10_Candidatos_de_la_semana_pasada</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <label>007.Candidatos de la semana pasada</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Auxiliar_control_de_calidad</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X11_Candidatos_de_esta_semana</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>006.Candidatos de esta semana</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X6_Candidatos_de_este_mes</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <label>008.Candidatos de este mes</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Auxiliar_control_de_calidad</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X7_Candidatos_este_a_o</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Nuevo</value>
        </filters>
        <label>010.Candidatos este año</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X8_Validar_informacion</fullName>
        <columns>Origen__c</columns>
        <columns>Numero_de_identificacion__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Verificando</value>
        </filters>
        <label>012.Mis candidatos por validar informaci</label>
        <sharedTo>
            <role>Asor_de_leads</role>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X9_Candidatos_a_convertir</fullName>
        <columns>Origen__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Numero_de_celular__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Propietario_candidato__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Fecha_asignacion__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Asignado</value>
        </filters>
        <label>011.Candidatos asignados</label>
        <sharedTo>
            <role>Auxiliar_canal_digital</role>
            <role>Presidente</role>
            <role>Supervisor_Call_Center_Canal_Digital</role>
            <role>VP_Comercial_y_de_Mercadeo</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Cliente_deudor</fullName>
        <active>false</active>
        <businessProcess>Credifamilia</businessProcess>
        <label>Cliente deudor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Convenio</fullName>
        <active>true</active>
        <businessProcess>Credifamilia</businessProcess>
        <label>Convenio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Hipotecario</fullName>
        <active>true</active>
        <businessProcess>Credifamilia</businessProcess>
        <label>Lead Hipotecario</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Seguro_Educativo</fullName>
        <active>true</active>
        <businessProcess>Credifamilia</businessProcess>
        <label>Lead Seguro Educativo</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>CD001_Valida_documento_numerico</fullName>
        <active>true</active>
        <description>Valida que el número de documento sea de tipo numérico</description>
        <errorConditionFormula>NOT ISNUMBER( Numero_de_identificacion__c)</errorConditionFormula>
        <errorDisplayField>Numero_de_identificacion__c</errorDisplayField>
        <errorMessage>CD-001. Este campo solo acepta caracteres numéricos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD002_Valida_candidato_NO_VIABLE</fullName>
        <active>false</active>
        <description>Si el candidato tiene un puntaje de datacredito mayor a 657 es &quot;NO VIABLE&quot;.</description>
        <errorConditionFormula>AND(

ISPICKVAL( Concepto_del_candidato__c ,&quot;NO VIABLE&quot; ),
Puntaje_data_credito__c  &gt;= 657

)</errorConditionFormula>
        <errorMessage>CD-002. Candidato &quot;NO VIABLE&quot; por puntaje datacredito.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD003_Cliente_no_prevalidado</fullName>
        <active>true</active>
        <description>Valida que no se ingrese en el campo puntaje datacredito cero (0) cuando el concepto del candidato es igual a &quot;No prevalidado&quot;.</description>
        <errorConditionFormula>AND(

ISPICKVAL(Concepto_del_candidato__c ,&quot;No prevalidado&quot; ),
Puntaje_data_credito__c &lt;&gt; 0

)</errorConditionFormula>
        <errorMessage>CD-003. Si el candidato &quot;No es prevalidado&quot; no debe tener puntaje data crédito igual a cero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD004_Valida_candidato_VIABLE</fullName>
        <active>true</active>
        <description>Son &quot;VIABLES&quot; los candidatos que residan en Bogotá o Medellín que tengan un puntaje de datacredito meno o igual a 658.</description>
        <errorConditionFormula>AND(

ISPICKVAL( Concepto_del_candidato__c ,&quot;Viable&quot; ),
Puntaje_data_credito__c &lt;= 658,

ISPICKVAL( Ciudad_de_residencia__c , &quot;Bogotá&quot;) ,
ISPICKVAL( Ciudad_de_residencia__c , &quot;Medellín&quot;)

)</errorConditionFormula>
        <errorMessage>CD-004. Candidato &quot;VIABLE&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD005_No_permite_convertir_el_candidato</fullName>
        <active>true</active>
        <description>Valida que sean &quot;VIABLES&quot; los candidatos que residan en Bogotá o Medellín que tengan un puntaje de datacredito meno o igual a 658.</description>
        <errorConditionFormula>AND( IsConverted   = TRUE,


OR(
ISPICKVAL(Concepto_del_candidato__c ,&quot;NO VIABLE&quot;),
ISPICKVAL(Concepto_del_candidato__c ,&quot;No prevalidado&quot;)

))</errorConditionFormula>
        <errorMessage>CD-005. El candidato es &quot;NO VIABLE&quot; o &quot;NO PREVALIDADO &quot; por favor no convertir.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD006_No_modificar_estado_del_candidato</fullName>
        <active>true</active>
        <description>Valida que solamente el Auxiliar de canal digital, el Director del canal digital, el Supervisor de call center y el administrador del sistema.</description>
        <errorConditionFormula>AND( 
    $User.ProfileId &lt;&gt; &quot;00eo0000000uvB5&quot;, 
    $User.ProfileId &lt;&gt; &quot;00eo0000000TUaz&quot;,
    $User.ProfileId &lt;&gt; &quot;00eo0000000PswQ&quot;,
    $User.ProfileId &lt;&gt; &quot;00eo0000000g0KU&quot;,

OR(
    ISPICKVAL( Status ,&quot;Nuevo&quot;),
    ISPICKVAL( Status ,&quot;Verificando&quot;),
    ISPICKVAL( Status ,&quot;Descartado&quot;)
    
))</errorConditionFormula>
        <errorMessage>CD-006. Perfil no autorizado para indicar los estados del candidato: Nuevo ,Descartado,Asignado,Verificando.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD007_Convertir_solo_estado_convertido</fullName>
        <active>true</active>
        <description>Valida que el candidato no se pueda convertir si se encuentra en el estado del candidato : Nuevo,Descartado,Verificando,Asignado.</description>
        <errorConditionFormula>AND( 
IsConverted = TRUE, 
OR( 
 Estado_de_candidato_1__c = &quot;Nuevo&quot;, 
 Estado_de_candidato_1__c = &quot;Verificando&quot;, 
 Estado_de_candidato_1__c = &quot;Descartado&quot; 



))</errorConditionFormula>
        <errorMessage>CD-007.  El estado del  candidato se encuentra como : Nuevo,Descartado,Verificando, por favor no convertir.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD007_Estados_permitidos</fullName>
        <active>false</active>
        <description>Valida que el candidato no se pueda convertir si se encuentra en el estado del candidato : Nuevo,Descartado,Verificando,Asignado.</description>
        <errorConditionFormula>AND( 
 ISCHANGED( IsConverted ),
 IsConverted = TRUE,
OR( 
 Estado_de_candidato_1__c = &quot;Nuevo&quot;, 
 Estado_de_candidato_1__c = &quot;Verificando&quot;, 
 Estado_de_candidato_1__c = &quot;Descartado&quot;

))</errorConditionFormula>
        <errorMessage>CD-007.  El estado del  candidato se encuentra como : Nuevo,Descartado,Verificando, por favor no convertir.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD008_No_convertir_NO_dueno</fullName>
        <active>true</active>
        <description>No permite convertir el lead porque no es el dueño del candidato.</description>
        <errorConditionFormula>AND( 

$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,

OwnerId &lt;&gt; $User.Id ,

IsConverted = TRUE


)</errorConditionFormula>
        <errorMessage>CD-008. No es propietario de este lead, por favor no convertir.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD009_Valida_campos_obligatorios</fullName>
        <active>true</active>
        <description>No se puede crear un candidato si los campos Nombre,Apellido, Número de documento, Correo electrónico, Número de celular y Ciudad de residencia están vacíos.</description>
        <errorConditionFormula>OR(
ISBLANK( FirstName ),
ISBLANK( Email ),
ISBLANK( Numero_de_celular__c )
)</errorConditionFormula>
        <errorMessage>CD-009. Hacen falta datos obligatorios para poder crear el candidato: Nombre,Apellido, Número de documento, Correo electrónico, Número de celular y Ciudad de residencia están vacíos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD010_Tipo_de_producto</fullName>
        <active>true</active>
        <description>No es posible modificar el tipo de producto si el tipo de registro es : “Lead seguro educativo”.</description>
        <errorConditionFormula>AND(

 RecordType.Name = &quot;Lead Seguro Educativo&quot;,
 ISCHANGED(Tipo_de_producto_que_le_interesa__c)
)</errorConditionFormula>
        <errorDisplayField>Tipo_de_producto_que_le_interesa__c</errorDisplayField>
        <errorMessage>No es posible modificar el tipo de producto si el tipo de registro es : “Lead seguro educativo”.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CD11_Codigo_asesor</fullName>
        <active>true</active>
        <description>El código del asesor solo puede ser modificado por los coordinadores de área</description>
        <errorConditionFormula>AND(
 $Profile.Id != &apos;00eo0000000TUaz&apos;,
 $Profile.Id != &apos;00eo0000000uvB5&apos;,
 ISCHANGED( Codigo_del_asesor__c )
)</errorConditionFormula>
        <errorMessage>CD11 El código del asesor de global solo puede ser modificado por los coordinadores de área.</errorMessage>
    </validationRules>
</CustomObject>